modified to use chat utils